Fix scrollbar theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+[data-mui-color-scheme="light"] {
+  color-scheme: light;
+}
+
+[data-mui-color-scheme="dark"] {
+  color-scheme: dark;
+}
